--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
         <section class="projects">
 
-          <ul class="filter-list">
+          <!-- <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -589,7 +589,7 @@
               <button data-filter-btn>Web development</button>
             </li>
 
-          </ul>
+          </ul> -->
 
           <div class="filter-select-box">
 
@@ -603,7 +603,7 @@
 
             </button>
 
-            <ul class="select-list">
+            <!-- <ul class="select-list">
 
               <li class="select-item">
                 <button data-select-item>All</button>
@@ -621,7 +621,7 @@
                 <button data-select-item>Web development</button>
               </li>
 
-            </ul>
+            </ul> -->
 
           </div>
 
@@ -649,23 +649,25 @@
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href=" https://iamkc0710.github.io/MyntraLandingPage/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project2.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Myntra Landing Page</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Developed a Single Page Website using only Html and Css</p>
 
               </a>
             </li>
+            <!-- <li class="project-item  active" data-filter-item data-category="web development">
 
             <li class="project-item  active" data-filter-item data-category="web design">
               <a href="#">
@@ -824,7 +826,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form>
+          <form action="https://formsubmit.co/thekaranchaurasiya@gmail.com" method="post" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
@@ -858,6 +860,7 @@
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
+ 
 
   <!--
     - ionicon link
