--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="btn-main">
             <p class="title">Web developer</p>
-            <p class="title"> <a href="./assets/images/Doc1.pdf" target="_blank">My Resume </a></p>
+            <p class="title"> <a href="./assets/images/Resume.pdf" target="_blank">My Resume </a></p>
           </div>
           
         </div>
