--- a/index.html
+++ b/index.html
@@ -860,7 +860,8 @@
     - custom js link
   -->
   <script src="./assets/js/script.js"></script>
- 
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+
 
   <!--
     - ionicon link
