--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </p>
 
           <p>
-            My keen interest in creating intuitive, responsive user interfaces drives me to continuously refine my skills and stay updated with the latest trends in web 
+            My keen interest in creating intuitive, responsive user interfaces drives me to continuously refine skills and stay updated with the latest trends in web 
             development. I'm eager to contribute my technical expertise and creativity to impactful projects.
           </p>
         </section>
